# puyovs

./: CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: compile.yml
Assets/Data/Lobby/: Settings.json
Audiolib/: CMakeLists.txt  audiolib.cpp  fast_mutex.h  minivorbis.cpp  tinythread.h
Audiolib/speex/: speex_types.h
Client/: CMakeLists.txt  common.cpp  frontendgl.cpp  frontendgl.h  gamemanager.cpp  gamewidget.cpp  gamewidget.h  gamewidgetgl.cpp  offlinedialog.cpp  offlinedialog.h  offlinedialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
ClientNG/: CMakeLists.txt  Font.cpp  Font.h  Game.cpp  Game.h  Paths.cpp  main.cpp
ClientNG/Renderers/: Renderer.cpp  Renderer.h
ClientNG/Renderers/OpenGL/: OpenGL.cpp  OpenGL.h
ClientNG/Renderers/Software/: Software.cpp  Software.h
ClientNG/Scenes/: Scene.h
ClientNG/Scenes/Intro/: IntroLogo.cpp  IntroNotes.cpp
Inputlib/: CMakeLists.txt
Inputlib/drivers/: sdldriver.cpp
Puyolib/: CharacterSelect.cpp  CharacterSelect.h  Controller.cpp  Controller.h  DropPattern.cpp  Frontend.h  Game.cpp  GameSettings.cpp  GameSettings.h  Menu.cpp  Player.cpp  Player.h  global.cpp  global.h
Puyolib/RuleSet/: RuleSet.cpp
